# vnkb-applet-svn

misc/evgs/docs/: TODO  dev.html  evgs-old.sql.bz2  evgs.sql  install.html
misc/evgs/extras/: 12_to_126_update.php  evgs.php  evgs2punbb.php
misc/evgs/upload/: TODO  admin_evgs.php  admin_index.php  admin_options.php  admin_permissions.php  admin_users.php  extern.php  footer.php  glossajax.php  glossary.php  glossitem.php  header.php  install.php  post.php  viewtopic.php
misc/evgs/upload/include/: common.php  common_admin.php  functions.php  glossary.php
misc/evgs/upload/include/template/: main.tpl
misc/evgs/upload/lang/English/: common.php  evgs.php
misc/evgs/upload/lang/Vietnamese/: evgs.php
misc/evgs/upload/plugins/: AMP_EVGS.php
misc/evgs/upload/style/: Cornflower.css  Oxygen.css  autocomplete.js  drupal.js
misc/evgs/upload/style/imports/: Cornflower_cs.css  base.css
trunk/: .GNOME_VnkbApplet_Factory.server.in.in.swp  ChangeLog  Makefile.am  README  VnkbApplet.xml  VnkbApplet_Factory.server.in.in  configure.in  vnkb-applet.c  vnkb-docklet.c  vnkb.h
trunk/po/: .intltool-merge-cache  Makefile.in  Makefile.in.in  POTFILES.in  vi.gmo  vi.po  vnkb-applet.pot
trunk/src/: Makefile.am  vnkb.c
trunk/src/libvnkb/: Makefile.am  config.c  eggaccelerators.c  eggcellrendererkeys.c  pref.c  uksync.c  uksync.h  vnkb-preferences.glade  vnkb.c  vnkb.h  xunikey.h  xvnkb.h
trunk/src/vnkb-applet/: Makefile.am  VnkbApplet.xml  VnkbApplet_Factory.server.in.in  vnkb-applet.c
trunk/src/vnkb-docklet/: Makefile.am  vnkb-docklet.c  vnkb-docklet.xml
