dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/libvnkb/vnkb.c)
dnl AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(vnkb-applet,0.0.1)


dnl Checks for programs.

AC_PROG_INTLTOOL([0.29])

AC_ISC_POSIX
AC_PROG_CC
AC_STDC_HEADERS
AC_LIBTOOL_WIN32_DLL
AM_PROG_LIBTOOL


dnl Checks for libraries.

GTK_REQUIRED=2.0.0
LIBPANELAPPLET_REQUIRED=2.0.0
PKG_CHECK_MODULES(VNKB, gtk+-2.0 >= $GTK_REQUIRED libpanelapplet-2.0 >= $LIBPANELAPPLET_REQUIRED)
AC_SUBST(VNKB_CFLAGS)
AC_SUBST(VNKB_LIBS)

GETTEXT_PACKAGE=vnkb-applet
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE")
AC_SUBST(GETTEXT_PACKAGE)
                                                                                
ALL_LINGUAS="vi"
										AM_GLIB_GNU_GETTEXT
										

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.

AC_OUTPUT([Makefile po/Makefile.in src/Makefile src/vnkb-applet/Makefile src/vnkb-docklet/Makefile src/libvnkb/Makefile])
